Security/test-no-limits.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-no-limits
  namespace: default
spec:
  containers:
    - name: test
      image: nginx:1.21
