Security/test-privileged.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-privileged
  namespace: default
spec:
  containers:
    - name: test
      image: nginx:1.21
      securityContext:
        privileged: true
      resources:
        limits:
          cpu: "200m"
          memory: "256Mi"
